feat(api): adicionar rota que retorna os jogos ignorados
