# apps/backend/src/modules/api/controllers/getIgnoredGames/query/getIgnoredGames.query.ts
@@ -1,0 +1,5 @@
+export interface GetIgnoredGamesQuery {
+  page?: string
+  limit?: string
+  order?: 'asc' | 'desc'
+}
