# apps/backend/src/modules/api/docs/swagger.yaml
@@ -444,6 +444,56 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/game_ignore_list"
+        500:
+          $ref: "#/components/responses/500"
+
+    get:
+      summary: Obter jogos ignorados
+      description: Retorna uma lista de jogos ignorados pelo scraper que descobre
+        novos jogos.
+      tags:
+        - "Jogos"
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: number
+            example: 1
+        - in: query
+          name: limit
+          schema:
+            type: number
+            example: 10
+        - in: query
+          name: order
+          schema:
+            default: asc
+            enum:
+              - asc
+              - desc
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  results:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/game_ignore_list"
+                  count:
+                    type: number
+                    example: 120
+                  page:
+                    type: number
+                    example: 5
+                  totalPages:
+                    type: number
+                    example: 12
+        500:
+          $ref: "#/components/responses/500"
 
   /drops:
     get:
